# OTIF

./: .env.example  .gitignore  DESKTOP_BUILD.md  PRODUCTION_RELEASE_CHECKLIST.md  README.md  implementation_plan.md
.githooks/: pre-commit
.github/workflows/: release.yml
apps/desktop/: otif-backend.spec  package-lock.json  package.json
apps/desktop/src/: App.tsx  api.ts  (+4 more)
apps/desktop/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
backend/: README.md  pyproject.toml  run_desktop.py
backend/app/: __init__.py  config.py  desktop_server.py  main.py
backend/app/ai/: __init__.py  provider_router.py  text_generation.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  ai.py  analysis.py  diagram_studio.py  diagrams.py  documents.py  health.py  projects.py  skills.py  writing_assistant.py
backend/app/core/: __init__.py  citation_lock.py  neon_db.py  runtime_config.py  secret_store.py
backend/app/data/: phrasebank.json
backend/app/db/: local_db.py
backend/app/export/: __init__.py  thesis_exporter.py
backend/app/research/: __init__.py  connectors.py
backend/app/skills/: __init__.py  skill_manager.py
backend/scripts/: seed_neon_schema.py  seed_skills.py
backend/tests/: test_analysis_pipeline.py  test_writing_assistant.py
data/config/: ai_settings.json
data/test/: research_paper.txt
data/uploads/: 0c941348-f1d6-4fa8-bdbd-f291cfd63390.json  0c941348-f1d6-4fa8-bdbd-f291cfd63390.txt  100a2dd8-421a-4666-bc99-175174b42c48.json  100a2dd8-421a-4666-bc99-175174b42c48.plan.json  100a2dd8-421a-4666-bc99-175174b42c48.txt  18d034df-1802-4099-abef-a8b5a2470df6.json  1d57f6f4-58a1-4f8d-a597-fb16ef8f409f.json  1fc5f58f-8d88-4404-947a-58d612582651.json  1fc5f58f-8d88-4404-947a-58d612582651.plan.json  1fc5f58f-8d88-4404-947a-58d612582651.rewrite_approval.json  1fc5f58f-8d88-4404-947a-58d612582651.txt  22c6126f-77b3-4f03-9f80-6ebf802c9397.json  2a04e432-486c-4cbb-b582-11cac2ce6f6a.json  2a04e432-486c-4cbb-b582-11cac2ce6f6a.rewrite_approval.json  3444d046-e11b-4681-a4c3-e25e8d8e013f.json  3444d046-e11b-4681-a4c3-e25e8d8e013f.plan.json  3444d046-e11b-4681-a4c3-e25e8d8e013f.rewrite_approval.json  3444d046-e11b-4681-a4c3-e25e8d8e013f.txt  39e9a0f8-9356-4a8d-9f79-95ad5abcdba7.json  39e9a0f8-9356-4a8d-9f79-95ad5abcdba7.plan.json  39e9a0f8-9356-4a8d-9f79-95ad5abcdba7.rewrite_approval.json  3e04a364-12ff-4b1e-b1a7-0092d4732b07.json  3e04a364-12ff-4b1e-b1a7-0092d4732b07.plan.json  3e04a364-12ff-4b1e-b1a7-0092d4732b07.rewrite_approval.json  52fcb7d1-8678-4790-965f-7cc8649e12e9.json  (+62 more)
scratch/: deterministic_analysis_gate_test.py  deterministic_existing_document_flow_test.py  deterministic_new_doc_flow_test.py  final_test.py  flow_existing_document_test.py  flow_existing_docx_test.py  test_pipeline.py
scripts/: build_backend_sidecar.ps1  build_backend_sidecar.sh  check_desktop_prereqs.ps1  tauri_windows.ps1  test_export_pipeline.py  test_production_claims.py
skill-seeds/: 01_plagiarism_check.json  02_humanization.json  03_reduce_ai_writing.json  04_writing_improvement.json  05_design_formatting.json  06_research_quality.json  07_citation.json  08_design_rewrite.json  09_academic_design.json  10_indian_phd_standards.json  11_indian_academic_journals.json
(+78 files in other folders)
