[package]
name = "otif-desktop"
version = "1.0.14"
description = "OpenThesis Integrity Fabric desktop app"
authors = ["OTIF Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
time = "=0.3.36"

[features]
custom-protocol = ["tauri/custom-protocol"]
